objects/Attendance__c.object
<CustomObject>
    <description>This object will capture all student attendance.</description>
    <fields>
        <fullName>Arrival_Time_Text__c</fullName>
        <inlineHelpText>Displays the time the student arrived to class. This field displays in the Attendance tab and the Attendance Wizard.</inlineHelpText>
        <label>Arrival Time</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <description>The time the student arrived for the session.</description>
        <inlineHelpText>Displays the date and time the student arrived to class. This value is used to calculate the time lost displayed in the Instructional Time Lost field.</inlineHelpText>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attendance_Status_Read_Only__c</fullName>
        <formula>Picklist_Value__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is an exact copy of the Status field and was created for use in Student record rollups. This field is used for Student/Parent Portal calculations. This field can be used in reports.</inlineHelpText>
        <label>Attendance Status Read Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field captures any comments related to the attendance of the student.</description>
        <inlineHelpText>Comments regarding attendance entered via the Attendance tab or Attendance Wizard. This field can also be updated on the Attendance record.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Daily__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox denotes whether the attendance record is a daily attendance record or a sectional attendance record.</description>
        <inlineHelpText>Indicates the Attendance record is for daily attendance. Otherwise, it is for sectional attendance.</inlineHelpText>
        <label>Daily</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Parental_Notification__c</fullName>
        <inlineHelpText>Displays the date and time the system sent an alert to parent/guardian informing them that their child had an unexcused absence/tardy. Parent notification must be setup or this field will always be blank.</inlineHelpText>
        <label>Date/Time of Parental Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_Time_Text__c</fullName>
        <inlineHelpText>Displays the time the student departed from class. This field displays in the Attendance tab and the Attendance Wizard.</inlineHelpText>
        <label>Departure Time Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <description>The time the student departs from class if it is an early departure.</description>
        <inlineHelpText>Displays the date and time the student departed from class. This value is used to calculate the time lost displayed in the Instructional Time Lost field.</inlineHelpText>
        <label>Departure Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field is for technical use only. It was created to help with the managed package data conversion.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructional_Time_Lost__c</fullName>
        <description>This formula is the total instructional time lost for a student who arrives late, leaves early, or both.</description>
        <formula>IF(
OR(
 TEXT(Picklist_Value__r.Category__c ) = &apos;Absent&apos;,
 Picklist_Value__r.Is_Suspension__c
),

(Session__r.End_DateTime__c - Session__r.Start_DateTime__c)*1440,

(IF(ISBLANK(Arrival_Time__c),0,(Arrival_Time__c - Session__r.Start_DateTime__c)) + IF(ISBLANK(Departure_Time__c), 0, ( Session__r.End_DateTime__c - Departure_Time__c)))*1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is an exact copy of the Instructional Time Lost field. It is used to calculate the following fields on the Student record: Daily Attendance Time Lost and Sectional Attendance Time Lost.</inlineHelpText>
        <label>Instructional Time Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Code__c</fullName>
        <description>Used in Rollup Calculations</description>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Internal Code *Retired*</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, users cannot modify this Attendance record through some SchoolForce screens.</inlineHelpText>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCES_Status__c</fullName>
        <description>This field is a specific status for NCES standards for reporting.</description>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>NCES Status *Retired*</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Present- Disciplinary action, receiving instruction</fullName>
                </value>
                <value>
                    <fullName>Present- In School, regular instructional program</fullName>
                </value>
                <value>
                    <fullName>Present- Nontraditional school setting, regular instructiona program</fullName>
                </value>
                <value>
                    <fullName>Present- Out of school, regular instructional program activity</fullName>
                </value>
                <value>
                    <fullName>Present- Out of school, school-approved extracurricular or cocurricular activity</fullName>
                </value>
                <value>
                    <fullName>Absent- Disciplinary action, not receiving instruction</fullName>
                </value>
                <value>
                    <fullName>Absent- Family activity</fullName>
                </value>
                <value>
                    <fullName>Absent- Family emergency or bereavement</fullName>
                </value>
                <value>
                    <fullName>Absent- illness, injury, health treatment, or examination</fullName>
                </value>
                <value>
                    <fullName>Absent- Legal or judicial requirement</fullName>
                </value>
                <value>
                    <fullName>Absent- Noninstructional activity recognized by state or school</fullName>
                </value>
                <value>
                    <fullName>Absent- Religious obsesrvation</fullName>
                </value>
                <value>
                    <fullName>Absent- Situation unknown</fullName>
                </value>
                <value>
                    <fullName>Absent- Student employment</fullName>
                </value>
                <value>
                    <fullName>Absent- Student is skipping school</fullName>
                </value>
                <value>
                    <fullName>Absent- Transportation not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Displays the value that users select to describe the student&apos;s attendance using the Attendance tab or Attendance Wizard. These picklist options are chosen by your school.</inlineHelpText>
        <label>Status</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Attendance</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <formula>Session__r.Session_Date__c</formula>
        <inlineHelpText>Displays the date and time of the Session record. This field should not be modified.</inlineHelpText>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_End_Time__c</fullName>
        <formula>Session__r.End_DateTime__c</formula>
        <inlineHelpText>SchoolForce uses this field and others to calculate the Instructional Time Lost field. This field should not be modified.</inlineHelpText>
        <label>Session End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Start_Time__c</fullName>
        <formula>Session__r.Start_DateTime__c</formula>
        <inlineHelpText>SchoolForce uses this field and others to calculate the Instructional Time Lost field. This field should not be modified.</inlineHelpText>
        <label>Session Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <description>This is a lookup to the sessions that attendance is being captured for.</description>
        <inlineHelpText>Displays the date and time of the Session. Do not update this field.</inlineHelpText>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Attendance</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_Category__c</fullName>
        <formula>IF(TEXT(Picklist_Value__r.Category__c)=&apos;Absent&apos;,
	IF(Picklist_Value__r.Is_Unexcused__c,&apos;Unexcused Absence&apos;,&apos;Excused Absence&apos;),
	IF(TEXT(Picklist_Value__r.Category__c)=&apos;Partial&apos;,
		IF(AND(Picklist_Value__r.Is_Tardy__c,NOT(Picklist_Value__r.Is_Early_Departure__c)),
			IF(Picklist_Value__r.Is_Unexcused__c,&apos;Unexcused Tardy&apos;,&apos;Excused Tardy&apos;),
			IF(AND(Picklist_Value__r.Is_Early_Departure__c,NOT(Picklist_Value__r.Is_Tardy__c)),
				IF(Picklist_Value__r.Is_Unexcused__c,&apos;Unexcused Early Departure&apos;,&apos;Excused Early Departure&apos;),
				IF(AND(Picklist_Value__r.Is_Early_Departure__c,Picklist_Value__r.Is_Tardy__c),
					IF(Picklist_Value__r.Is_Unexcused__c,&apos;Unexcused Tardy and Early Departure&apos;,&apos;Excused Tardy and Early Departure&apos;),
					TEXT(Picklist_Value__r.Category__c)
				)
			)
		),
		IF(OR(ISNULL(TEXT(Picklist_Value__r.Category__c)), ISBLANK(TEXT(Picklist_Value__r.Category__c))),
			&apos;UNKNOWN&apos;,
			TEXT(Picklist_Value__r.Category__c)
		)
	)
)</formula>
        <label>Status Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This is the status of the attendance for the student for the given session.</description>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Status *Retired*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Present</fullName>
                </value>
                <value>
                    <fullName>Tardy</fullName>
                </value>
                <value>
                    <fullName>Excused Tardy</fullName>
                </value>
                <value>
                    <fullName>Unexcused Absence</fullName>
                </value>
                <value>
                    <fullName>Excused Absence</fullName>
                </value>
                <value>
                    <fullName>Early Departure</fullName>
                </value>
                <value>
                    <fullName>Excused Early Departure</fullName>
                </value>
                <value>
                    <fullName>In-school Suspension</fullName>
                </value>
                <value>
                    <fullName>Out of school Suspension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_for_Rollup__c</fullName>
        <inlineHelpText>This field is a modified copy of the Status field and was created to allow for numeric rollups on the Student record (e.g., Total # of Unexcused Daily Absences).</inlineHelpText>
        <label>Status for Rollup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <description>This is a lookup to the student record.</description>
        <inlineHelpText>This field provides a link to the Student record for the year. Do not update this field.</inlineHelpText>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Attendance</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student_s_Grade__c</fullName>
        <description>Needs to be available in trigger, so we add to Attendance Object</description>
        <formula>TEXT(Student__r.Grade__c)</formula>
        <inlineHelpText>This formula field displays the student&apos;s grade level and can be used in reports. This field is pulled from the Student record.</inlineHelpText>
        <label>Student&apos;s Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the date and time from the Created By field. It can be used in reports.</inlineHelpText>
        <label>Submission Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Lost_Rollup__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will be set using a workflow that can then be rolled up to the student record.</description>
        <inlineHelpText>This field is an exact copy of the Instructional Time Lost field and was created to allow for rollups. It is used to calculate the following fields on the Student record: Daily Attendance Time Lost and Sectional Attendance Time Lost.</inlineHelpText>
        <label>Time Lost For Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>UA</fullName>
        <columns>Student__c</columns>
        <columns>Session__c</columns>
        <columns>Daily__c</columns>
        <columns>Arrival_Time__c</columns>
        <columns>Departure_Time__c</columns>
        <columns>Instructional_Time_Lost__c</columns>
        <columns>Session_Date__c</columns>
        <columns>Picklist_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Picklist_Value__c</field>
            <operation>notEqual</operation>
            <value>Present</value>
        </filters>
        <filters>
            <field>Session_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>UA</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Attendance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>