objects/Attendance__c/listViews/UA.listView-meta.xml
<ListView>
    <fullName>UA</fullName>
    <columns>Student__c</columns>
    <columns>Session__c</columns>
    <columns>Daily__c</columns>
    <columns>Arrival_Time__c</columns>
    <columns>Departure_Time__c</columns>
    <columns>Instructional_Time_Lost__c</columns>
    <columns>Session_Date__c</columns>
    <columns>Picklist_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Picklist_Value__c</field>
        <operation>notEqual</operation>
        <value>Present</value>
    </filters>
    <filters>
        <field>Session_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>UA</label>
</ListView>